syntax = "proto3";

package org.openmcf.credential.v1;

import "google/protobuf/timestamp.proto";
import "org/openmcf/provider/atlas/provider.proto";
import "org/openmcf/provider/auth0/provider.proto";
import "org/openmcf/provider/aws/provider.proto";
import "org/openmcf/provider/azure/provider.proto";
import "org/openmcf/provider/civo/provider.proto";
import "org/openmcf/provider/cloudflare/provider.proto";
import "org/openmcf/provider/confluent/provider.proto";
import "org/openmcf/provider/digitalocean/provider.proto";
import "org/openmcf/provider/gcp/provider.proto";
import "org/openmcf/provider/kubernetes/provider.proto";
import "org/openmcf/provider/openfga/provider.proto";
import "org/openmcf/provider/snowflake/provider.proto";

// Generic credential message.
message Credential {
  // Unique identifier.
  string id = 1;
  // Name of the credential.
  string name = 2;

  // CredentialProvider enum for supported cloud providers.
  enum CredentialProvider {
    CREDENTIAL_PROVIDER_UNSPECIFIED = 0;
    GCP = 1;
    AWS = 2;
    AZURE = 3;
    AUTH0 = 4;
    OPEN_FGA = 5;
  }

  // Provider type.
  CredentialProvider provider = 3;

  CredentialProviderConfig provider_config = 4;

  // Creation timestamp.
  google.protobuf.Timestamp created_at = 7;
  // Last update timestamp.
  google.protobuf.Timestamp updated_at = 8;
}

message CredentialProviderConfig {
  // Provider-specific credential data.
  oneof data {
    org.openmcf.provider.atlas.AtlasProviderConfig atlas = 1;
    org.openmcf.provider.aws.AwsProviderConfig aws = 2;
    org.openmcf.provider.azure.AzureProviderConfig azure = 3;
    org.openmcf.provider.civo.CivoProviderConfig civo = 4;
    org.openmcf.provider.cloudflare.CloudflareProviderConfig cloudflare = 5;
    org.openmcf.provider.confluent.ConfluentProviderConfig confluent = 6;
    org.openmcf.provider.digitalocean.DigitalOceanProviderConfig digitalocean = 7;
    org.openmcf.provider.gcp.GcpProviderConfig gcp = 8;
    org.openmcf.provider.kubernetes.KubernetesProviderConfig kubernetes = 9;
    org.openmcf.provider.snowflake.SnowflakeProviderConfig snowflake = 10;
    org.openmcf.provider.auth0.Auth0ProviderConfig auth0 = 11;
    org.openmcf.provider.openfga.OpenFgaProviderConfig openfga = 12;
  }
}
