syntax = "proto3";

package org.openmcf.shared.cloudresourcekind;

import "google/protobuf/descriptor.proto";

//enum value options for cloud-resource-provider
extend google.protobuf.EnumValueOptions {
  CloudResourceProviderMeta provider_meta = 81101;
}

//metadata for cloud-resource-provider
message CloudResourceProviderMeta {
  //name of the cloud-resource-provider group
  string group = 1;
  //display name of the cloud-resource-provider group
  string display_name = 2;
}

//cloud resource provider
enum CloudResourceProvider {
  cloud_resource_provider_unspecified = 0;
  _test = 1 [(provider_meta) = {
    group: "_test.openmcf.org"
    display_name: "Test Cloud Resources"
  }];

  atlas = 11 [(provider_meta) = {
    group: "atlas.openmcf.org"
    display_name: "MongoDB Atlas"
  }];
  aws = 12 [(provider_meta) = {
    group: "aws.openmcf.org"
    display_name: "AWS"
  }];
  azure = 13 [(provider_meta) = {
    group: "azure.openmcf.org"
    display_name: "Azure"
  }];
  civo = 14 [(provider_meta) = {
    group: "civo.openmcf.org"
    display_name: "Civo"
  }];
  cloudflare = 15 [(provider_meta) = {
    group: "cloudflare.openmcf.org"
    display_name: "Cloudflare"
  }];
  confluent = 16 [(provider_meta) = {
    group: "confluent.openmcf.org"
    display_name: "Confluent"
  }];
  digital_ocean = 17 [(provider_meta) = {
    group: "digital-ocean.openmcf.org"
    display_name: "DigitalOcean"
  }];
  gcp = 18 [(provider_meta) = {
    group: "gcp.openmcf.org"
    display_name: "GCP"
  }];
  kubernetes = 19 [(provider_meta) = {
    group: "kubernetes.openmcf.org"
    display_name: "Kubernetes"
  }];
  snowflake = 20 [(provider_meta) = {
    group: "snowflake.openmcf.org"
    display_name: "Snowflake"
  }];
  auth0 = 21 [(provider_meta) = {
    group: "auth0.openmcf.org"
    display_name: "Auth0"
  }];
  open_fga = 22 [(provider_meta) = {
    group: "open-fga.openmcf.org"
    display_name: "OpenFGA"
  }];
}
